--- a/README.html
+++ b/README.html
@@ -5,13 +5,13 @@
 <body> 
 
 <script src= "app.js"> </script>
-
+<link rel="stylesheet" href="style.css">
 
 
 # Quiz-
 <h1> Quiz Application </h1> 
 
-<p> This Repository is about Online Quizzing which is a key component in the matrix of tools available for students. <b> This will help to test the abilitity of one's knowledge in a light environment, user-oriented and self-paced environment placed promotes usage of the applicaion and success. </p>
+<p> This Repository is about Online Quizzing which is a key component in the matrix of tools available for students. <br> This will help to test the abilitity of one's knowledge in a light environment, user-oriented and self-paced environment placed promotes <br> usage of the applicaion and success. </p>
 
 
 
