--- a/index.html
+++ b/index.html
@@ -14,9 +14,31 @@
 <p> This Repository is about Online Quizzing which is a key component in the matrix of tools available for students. <br> This will help to test the abilitity of one's knowledge in a light environment, user-oriented and self-paced environment placed promotes <br> usage of the applicaion and success. </p>
 
 
-<ol> 
-    <ol> Ability of One's knowledge' </ol>
-    </ol> 
+<form>
+    Question 1 <br>
+<input type= "Your question here"><br>
+
+<button type="button"
+    onclick= "document.getElementById('demo').innerHTML = 'This is your first answer'">
+    Click on button to get your answer </button>
+
+    <p id="demo"></p>
+
+Question 2 <br> 
+<input type= "Your second question here"><br>
+
+<button type="button"
+onclick="document.getElementById('demo').innerHTML = 'This is second answer'"> Click on button to get your second answer </button>
+
+<p id="demo"></p>
+
+</form>
+
+
+
+
+
+    
 
 
 
