--- a/index.html
+++ b/index.html
@@ -1,20 +1,14 @@
 <!Doctype html> 
-<html> 
+<html lang="en">
 <head> 
-<title> Testing of JavaScript </title>
+    
+    <link rel="stylesheet" href="style.css">
+
+    <title> Testing of JavaScript </title>
+</head>
 <body> 
 
-<script src= "app.js"> </script>
-<link rel="stylesheet" href="style.css">
 
-
-# Quiz-
-<h1> Quiz Application </h1> 
-<div class="element"></div>
-<p> This Repository is about Online Quizzing which is a key component in the matrix of tools available for students. <br> This will help to test the abilitity of one's knowledge in a light environment, user-oriented and self-paced environment placed promotes <br> usage of the applicaion and success. </p>
-
-
-<form>
     Question 1 <br>
 <input type= "Your question here"><br>
 
@@ -22,7 +16,7 @@
     onclick= "document.getElementById('demo').innerHTML = 'This is your first answer'">
     Click on button to get your answer </button>
 
-    <p id="demo"></p>
+    <p id="asif"></p>
 
 Question 2 <br> 
 <input type= "Your second question here"><br>
@@ -33,6 +27,14 @@ onclick="document.getElementById('demo').innerHTML = 'This is second answer'"> C
 <p id="demo"></p>
 
 </form>
+</table>
+# Quiz-
+<h1> Quiz Application </h1> 
+<div class="element"></div>
+<p> This Repository is about Online Quizzing which is a key component in the matrix of tools available for students. <br> This will help to test the abilitity of one's knowledge in a light environment, user-oriented and self-paced environment placed promotes <br> usage of the applicaion and success. </p>
+
+
+
 
 
 
@@ -68,7 +70,6 @@ onclick="document.getElementById('demo').innerHTML = 'This is second answer'"> C
 
 
 
-
-</head>
+<script src= "app.js"> </script>
 </body>
 </html> 
